fix: sticky header spacing

--- a/src/components/header-center/header-center.scss
+++ b/src/components/header-center/header-center.scss
@@ -11,9 +11,6 @@
     margin-right:12px;
     margin-left:8px;
   }
-  .it-header-center-wrapper .it-header-center-content-wrapper {
-    // justify-content:center;
-  }
 }
 
 //Small tablet ------------------------------------------------------------------------------------------
@@ -36,6 +33,11 @@
   }
   .it-header-center-wrapper .it-header-center-content-wrapper .it-brand-wrapper a .icon {
     margin-right:24px;
+    margin-left:0;
+  }
+
+  .it-header-wrapper.it-header-sticky.is-sticky .it-header-navbar-wrapper .menu-wrapper .it-search-wrapper, 
+  .it-header-wrapper.it-header-sticky.is-sticky .it-header-navbar-wrapper .menu-wrapper .it-search-wrapper a.rounded-icon {
     margin-left:0;
   }
 }
